autotests/syntax-tests/tests/negative/negative61.sref
Name { Name $EENUM Name Name = ; = ; } ; 